ambari-server/src/main/conf/unix/ubuntu/sysconfig/iptables
*filter
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [4336605:3237430358]
:OUTPUT ACCEPT [19418758:35598823868]
-A INPUT -i lo -j ACCEPT 
-A INPUT -s 10.10.10.0/255.255.255.0 -j ACCEPT 
-A INPUT -p gre -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 47 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 1723 -j ACCEPT 
-A INPUT -p udp -m state --state NEW -m udp --dport 1194 -j ACCEPT 
-A INPUT -p icmp -m icmp --icmp-type any -j ACCEPT 
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A INPUT -p udp -m udp --dport 53 -j ACCEPT 
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT tcp -p -m state --state NEW -m tcp --dport 5900:5999 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited 
COMMIT
